--- a/Contact Us.html
+++ b/Contact Us.html
@@ -1,3 +1,4 @@
+<html>
 <style>
 body{
 font-family:'segoe UI',
@@ -26,7 +27,8 @@ color:black;
 }
 .contact-info p{
 margin:5px 0;
-color: black;
+color: red;
+  font-size:20;
 }
 .contact-form{
 margin-top:20px;
@@ -38,6 +40,7 @@ button:hover{
 backgrond-color:red;
 }
 </style>
+  <body>
 <section class="contact-section">
 <h2>wasiliana nasi.</h2>
 <p><b>tafadhari jaza fomu hapa chini au tuma ujumbe kupitia njia zetu rasmi za mawasiliano.<b></p>
@@ -56,6 +59,7 @@ placeholder="jina lako" required>
 placeholder="Barua pepe yako" required>
 <textarea placeholder="ujumbe wako" required></textarea>
 <button type="submit">Tuma ujumbe</button>
+  </body>
 </form>
-
 </section>
+  </html>
