--- a/Gallery.html
+++ b/Gallery.html
@@ -1,5 +1,5 @@
-
-<img src="C:\Users\PC\Desktop/I1.jpg"
+<html>
+<img src="I1.jpg"
 alt="our stationary"
 width="400">
 <img src="II2.jpg"
@@ -31,4 +31,6 @@ alt="our stationary"
 width="400">
 <img src="ii1.jpg"
 alt="our stationary"
+
 width="400">
+</html>
