--- a/index.html
+++ b/index.html
@@ -5,15 +5,7 @@
     <meta charset="UTF-8">
    <title>Ibraah Group Online Services</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-<nav>
-<ul>
-<li><b><a href="index.html">Home</b></a></li><br>
-<li><b><a href="about.html">About Us</b></a></li><br>
-<li><b><a href="Gallery.html">Gallery</b></a></li><br>
-<li><b><a href="Contact Us.html">Contact Us<b></a></li><br>
-<li><b><a href="News.html">News & Event</b></a></li><br>
-</ul>
-</nav>   
+
     <meta charset="UTF-8">
     <title>Ibraah Group Online Service</title>
     <style>
@@ -27,6 +19,17 @@ padding:10px;
 list-style-type:none;
 margin:0;
 pading:0;
+}
+.nav-links{
+    list-style:none;
+    display:flex;
+    gap:20px;
+    padding:0;
+}
+.nav-links li a {
+    text-decoration:none;
+    color:blue;
+    font-weight:bold;
 }
 .navbar li{
 display:inline;
@@ -96,17 +99,17 @@ left:0;
     color: white;
 }
 .image-marquee img{
-    height: 120px;
+    height: 300px;
     margin: 0 10px;
-    width: 180;
+    width: 300px;
     object-fit: cover;
 }
 .about-section{
-    background-color: #008000;
+    background-color: orange;
     padding: 20px;
     border-radius: 10px;
     text-align: center;
-    font-size: 25px;s
+    font-size: 20px;s
     color: white;
 }
 .social-icons a{
@@ -129,6 +132,15 @@ left:0;
     <h1><marquee>Karibu Ibraah Group Online Service, Huduma Bora na za Uhakika kwa Weredi na Umakini wa Hali ya Juu Zaidi.</marquee></h1>
 </header>
     <br>
+    <nav>
+<ul class="nav-links">
+<li><b><a href="index.html">Home</b></a></li><br>
+<li><b><a href="about.html">About Us</b></a></li><br>
+<li><b><a href="Gallery.html">Gallery</b></a></li><br>
+<li><b><a href="Contact Us.html">Contact Us<b></a></li><br>
+<li><b><a href="News.html">News & Event</b></a></li><br>
+</ul>
+</nav>   
 <section>
     <h2>kwa Maendeleo Yako Karibu! uwe nasi</h2>
     <p2>
@@ -163,7 +175,7 @@ image-marquee">
     <p><strong>Our Mission:</strong> To provide fast, secure, and professional services for personal and academic development.</p>
     <p><strong>Slogan:</strong> "Quality Service for Your Progress, Stand Up It Not Over."</p>
 </section><br><br>
-<img src="C:\Users\PC\Desktop/I8.jpg"
+<img src="I8.jpg"
 alt="our stationary"
 width="400"><br><br>
 <table border="5">
@@ -183,7 +195,7 @@ width="400"><br><br>
 
 
 </table><br><br>
-<img src="C:\Users\PC\Desktop/I11.jpg"
+<img src="I11.jpg"
 alt="our stationary"
 width="400">
 <section>
@@ -195,7 +207,7 @@ width="400">
         <li>Professional academic advice and mentorship</li>
         <li>Official email creation and digital document support</li>
     </ul>
-<img src="C:\Users\PC\Desktop/I2.jpg"
+<img src="I2.jpg"
 alt="our stationary"
 width="400">
 <section>
@@ -204,7 +216,7 @@ width="400">
 </section>
 <p> <center><b>welcome more and more and visit our content</center></b></p><br><br>
 
-<img src="C:\Users\PC\Desktop/I4.jpg"
+<img src="I4.jpg"
 alt="our stationary"
 width="400">
 <footer>
@@ -225,4 +237,5 @@ width="400">
    
 </footer>
 </body>
+
 </html>
